--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
                 <img decoding="async" src="./Gridx – WordPress Theme – Personal Portfolio Website_files/me.png" alt="About Me">
             </div>
             <div class="infos">
-                <h4>A WEB DESIGNER</h4>
-                <h1>David Henderson.</h1>
-                <p>I am a Web Designer based in san fransisco.</p>
+                <h4>PenTester</h4>
+                <h1>Satvik Shetty.</h1>
+                <p>I am a Penetration Tester</p>
                 <a href="https://wpriverthemes.com/gridx/#" class="about-btn">                    
                     				
 <img decoding="async" src="./Gridx – WordPress Theme – Personal Portfolio Website_files/icon.svg" alt="Button">
