--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				
 
             <div class="img-box">
-                <img decoding="async" src="./Gridx – WordPress Theme – Personal Portfolio Website_files/me.png" alt="About Me">
+                <img decoding="async" src="./Gridx – WordPress Theme – Personal Portfolio Website_files/satvik.png" alt="About Me">
             </div>
             <div class="infos">
                 <h4>PenTester</h4>
