--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Satvik Shetty- Penetration Tester</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <header>
     <div class="container">
-      <img src="satvik.png" alt="Your Logo">
+      <img src="./satvik.png" alt="Your Logo">
       <h1>Satvik Shetty</h1>
       <h2>Penetration Tester</h2>
     </div>
