--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="container">
-      <img src="./satvik.png" alt="Your Logo">
+      <img src="./satvik.png" alt="Your Logo" style="height:50px">
       <h1>Satvik Shetty</h1>
       <h2>Penetration Tester</h2>
     </div>
