--- a/index.html
+++ b/index.html
@@ -1,57 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Satvik Shetty- Penetration Tester</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <header>
-    <div class="container">
-      <img src="./satvik.png" alt="Your Logo" style="height:50px">
-      <h1>Satvik Shetty</h1>
-      <h2>Penetration Tester</h2>
-    </div>
-  </header>
-
-  <nav>
-    <div class="container">
-      <ul>
-        <li><a href="#introduction">Introduction</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <section id="introduction" class="section">
-    <div class="container">
-      <h2>Introduction</h2>
-      Im Satvik Shetty pursuing B.tech in cybersecurity . Im passionate about cybersecurity .
-    </div>
-  </section>
-
-  <section id="about" class="section">
-    <div class="container">
-      <h2>About Me</h2>
-      hey All ! welcome to the portfolio site
-    </div>
-  </section>
-
-  <section id="skills" class="section">
-    <div class="container">
-      <h2>Skills</h2>
-	    pentester 
-    </div>
-  </section>
-
-  <footer>
-    <div class="container">
-      <p>&copy; 2023 Satvik Shetty . All rights reserved.</p>
-    </div>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>06</title>
+		<link rel="stylesheet" href="./style.css" />
+	</head>
+	<body>
+		<figure class="card">
+			<img
+				src="./pexels-arianna-jadé-2896853.jpg"
+				alt="..."
+				class="card__image"
+			/>
+			<figcaption class="card__body">
+				<div>
+					<h2 class="card__category">John Doe</h2>
+					<p class="card__author">Software Engineer</p>
+				</div>
+				<a href="#" class="card__button">View resume</a>
+			</figcaption>
+		</figure>
+	</body>
 </html>
