--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 	<body>
 		<figure class="card">
 			<img
-				src="./pexels-arianna-jadé-2896853.jpg"
+				src="./satvik.png"
 				alt="..."
 				class="card__image"
 			/>
 			<figcaption class="card__body">
 				<div>
-					<h2 class="card__category">John Doe</h2>
-					<p class="card__author">Software Engineer</p>
+					<h2 class="card__category">Satvik Shetty</h2>
+					<p class="card__author">PenTester</p>
 				</div>
-				<a href="#" class="card__button">View resume</a>
+				<a href="#" class="card__button">View Blog</a>
 			</figcaption>
 		</figure>
 	</body>
