--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<h2 class="card__category">Satvik Shetty</h2>
 					<p class="card__author">PenTester</p>
 				</div>
-				<a href="#" class="card__button">View Blog</a>
+				<a href="https://noobiehackers.com" class="card__button">View Blog</a>
 			</figcaption>
 		</figure>
 	</body>
