--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 					<p class="card__author">PenTester</p>
 				</div>
 				<a href="https://noobiehackers.com" class="card__button">View Blog</a>
+				<script src="https://tryhackme.com/badge/1380640"></script>
 			</figcaption>
 		</figure>
 	</body>
