--- a/index.html
+++ b/index.html
@@ -1,27 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Satvik Shetty - PenTester</title>
-		<link rel="stylesheet" href="./style.css" />
-	</head>
-	<body>
-		<figure class="card">
-			<img
-				src="./satvik.png"
-				alt="..."
-				class="card__image"
-			/>
-			<figcaption class="card__body">
-				<div>
-					<h2 class="card__category">Satvik Shetty</h2>
-					<p class="card__author">PenTester</p>
-				</div>
-				<a href="https://noobiehackers.com" class="card__button">View Blog</a>
-				<script src="https://tryhackme.com/badge/1380640"></script>
-			</figcaption>
-		</figure>
-	</body>
+<html>
+<head>
+  <title>Cities</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <h1>Cities</h1>
+  <div class="city-buttons">
+    <a href="delhi.html" class="city-button">Delhi</a>
+    <a href="lucknow.html" class="city-button">Lucknow</a>
+    <a href="jaipur.html" class="city-button">Jaipur</a>
+  </div>
+</body>
 </html>
