--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <title>Cities</title>
-  <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <h1>Cities</h1>
   <div class="city-buttons">
-    <a href="delhi.html" class="city-button">Delhi</a>
+    <a href="delhi.htm" class="city-button">Delhi</a>
     <a href="lucknow.html" class="city-button">Lucknow</a>
     <a href="jaipur.html" class="city-button">Jaipur</a>
   </div>
